--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,43 @@
-/* NavBar */
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* VARIABLES */
+:root {
+   --mainColor1: #6E2828;
+   --backgroundGradient:linear-gradient(0deg, rgba(255,150,65,1) 0%, rgba(71,166,98,0.613865614605217) 61%, rgba(234,234,204,0) 86%);;
+   --textColor1: #EAEACC;
+   --textColor2: #000000;
+   --textColor3: #FFFFFF;
+   --linkColor1: #FF9844;
+   --detailColor1: #6E2828;
+   --detailColor2:#ED6A01;
+   --detailColor3:#EBAF7E;
+   --detailColor4:#BBA99B;
+   --detailColor5:#47A662;
+}
+
+/* Global */
+* {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   /*overflow: hidden;*/
+}
+
+/* Body */
+body {
+   background: rgb(255,150,65);
+   background: var(--backgroundGradient);
+   max-width: 100%;
+   font-family: 'Red Hat Display', sans-serif;
+}
+
+
 .navbar,
 .offcanvas-body,
 .offcanvas-header {
    width: 100%;
    height: 152px;
-   background-color: #6e2828;
+   background-color: var(--mainColor1);
 }
 .nav-item a {
    color: #e8e9cb;
@@ -19,3 +52,161 @@
 .slide {
    padding: 0;
 }
+
+.carousel, .navbar {
+   margin:0;
+}
+
+.section-slide {
+   max-width: 100%;
+}
+
+
+/* Contact */
+
+.home-contact {
+   background-color: #484437;
+   background-image: url("https://i.ibb.co/GThRnLD/footer.png");
+   object-fit: cover;
+   background-size: cover;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   color: var(--textColor1);
+   padding:4rem 0;
+}
+
+.question,.home-contact__description {
+   margin: 0;
+   color: var(--textColor3);
+   font-weight: 400;
+   font-size:1.2rem;
+}
+
+.arrow-img {
+   width: 30px;
+   margin: 1rem 0;
+}
+
+.home-contact__title {
+   margin-top: .3rem;
+   position: relative;
+   z-index: 0;
+   font-size: 2.5rem;
+}
+.home-contact__title::after {
+   content: "";
+   position: absolute;
+   background-color: var(--mainColor1);
+   width: 98%;
+   height: 60%;
+   left:1.2rem;
+   top: 1.5rem;
+   z-index: -1;
+   
+}
+
+/* Footer */
+
+footer {
+   width: 100%;
+   background-color: var(--mainColor1);
+   color:var(--textColor1);
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   padding: 2rem 0;
+   padding-top: 3rem;
+   gap:2rem;
+}
+
+.footer-rest {
+   display: flex;
+   max-height: fit-content;
+   align-items: flex-start;
+   justify-content: space-between;
+   width: 60%;
+}
+
+.footer-container, .footer-details {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+}
+.footer-details-container {
+   height: 100%;
+   margin:0 3rem;
+   padding-bottom: 2rem;
+   padding-right: 10rem;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   border-bottom: 2px solid var(--textColor1);
+}
+
+.footer-details {
+   max-width: 30%;
+}
+
+.footer-img-logo {
+   width: 250px;
+   object-fit: cover;
+}
+
+.footer-details__title {
+   color:var(--linkColor1);
+   text-align: left;
+   align-self: flex-start;
+   font-size: 20px;
+}
+
+.footer-details__description {
+   list-style: none;
+   align-self: flex-start;
+   margin: 0;
+   padding: 0;
+   font-size: 16px;
+   line-height: 20px;
+}
+
+.footer-copyright {
+   height: 100%;
+   display: flex;
+   text-align: center;
+   justify-content: center;
+   font-size: 14px;
+}
+
+.footer-copyright-center {
+   display: flex;
+   padding: 0;
+   
+   align-items: center;
+   align-self: center;
+   justify-self: center;
+   
+}
+
+.footer-copyright__first {
+   padding-right: 10px;
+   border-right: 2px solid var(--textColor1);
+   align-self: center;
+   margin: 0;
+}
+.footer-copyright__second {
+   padding-left: 10px;
+   margin: 0;
+}
+
+.footer-details__links {
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+}
+.footer-social {
+   width:2.2rem;
+}
+
