--- a/css/style.css
+++ b/css/style.css
@@ -37,19 +37,171 @@ body {
    font-family: "Red Hat Display", sans-serif;
 }
 
-.navbar,
-.offcanvas-body,
-.offcanvas-header {
+/* NavBar */
+
+.navbar {
+   background: var(--mainColor1);
+   height: 110px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 1rem;
+   position: sticky;
+   top: 0;
+   z-index: 999;
+}
+
+.navbar__container {
+   display: flex;
+   justify-content: space-between;
+   height: 80px;
+   z-index: 1;
    width: 100%;
-   height: 152px;
-   background-color: var(--mainColor1);
+   max-width: 1300px;
+   margin: 0 auto;
+   padding: 0 50px;
 }
-.nav-item a {
-   color: #e8e9cb;
-   font-size: 19px;
-   line-height: 20.5px;
+
+.navbar__menu {
+   display: flex;
+   align-items: center;
+   list-style: none;
+}
+
+.navbar__item {
+   height: 80px;
+}
+
+.navbar__links {
+   color: var(--textColor1);
+   font-size: 22px;
    font-weight: bold;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 0 20px;
+   text-decoration: none;
+   height: 100px;
+   transition: all 0.3s ease;
 }
+
+.navbar__btn {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 0 1rem;
+   width: 100%;
+}
+
+.navbar__links:hover {
+   color: var(--linkColor1);
+   transition: all 0.3s ease;
+}
+
+/* Mobile */
+
+@media screen and (max-width: 960px) {
+   .navbar__container {
+      display: flex;
+      justify-content: space-between;
+      height: 80px;
+      z-index: 1;
+      width: 100%;
+      max-width: 1300px;
+      padding: 0;
+   }
+
+   .navbar__menu {
+      display: grid;
+      grid-template-columns: auto;
+      margin: 0;
+      width: 100%;
+      position: absolute;
+      top: -1000px;
+      opacity: 1;
+      transition: all 0.5s ease;
+      z-index: -1;
+   }
+
+   .navbar__menu.active {
+      background: var(--mainColor1);
+      top: 100%;
+      opacity: 1;
+      transition: all 0.5s ease;
+      z-index: 99;
+      height: 60vh;
+      font-size: 1.6rem;
+   }
+
+   #navbar__logo {
+      padding-left: 25px;
+   }
+
+   .navbar__toggle .bar {
+      width: 25px;
+      height: 3px;
+      margin: 5px auto;
+      transition: all 0.3s ease-in-out;
+      background: #fff;
+   }
+
+   .navbar__item {
+      width: 100%;
+   }
+
+   .navbar__links {
+      text-align: center;
+      padding: 2rem;
+      width: 100%;
+      display: table;
+   }
+
+   .navbar__btn {
+      padding-bottom: 2rem;
+   }
+
+   .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 80%;
+      height: 80px;
+      margin: 0;
+   }
+
+   #mobile-menu {
+      position: absolute;
+      top: 20%;
+      right: 5%;
+      transform: translate(5%, 20%);
+   }
+
+   .navbar__toggle .bar {
+      display: block;
+      cursor: pointer;
+   }
+
+   #mobile-menu.is-active .bar:nth-child(2) {
+      opacity: 0;
+   }
+
+   #mobile-menu.is-active .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+   }
+
+   #mobile-menu.is-active .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+      -webkit-transform: translateY(-8px) rotate(-45deg);
+      -moz-transform: translateY(-8px) rotate(-45deg);
+      -ms-transform: translateY(-8px) rotate(-45deg);
+      -o-transform: translateY(-8px) rotate(-45deg);
+   }
+}
+/* Js efecto navbar */
+.highlight {
+   border-bottom:10px solid var(--linkColor1);
+ }
+ 
 /* Slide */
 .slide-img {
    width: 100%;
@@ -66,8 +218,7 @@ body {
    line-height: 55px;
    right: 40px;
    bottom: 30px;
-}  
-
+}
 
 /* Details */
 
@@ -77,7 +228,6 @@ body {
    align-items: center;
    padding: 3rem;
    padding-top: 2rem;
-   
 }
 .home-details-container {
    display: flex;
@@ -96,7 +246,7 @@ body {
 }
 
 .home-details-text__pretitle {
-   font-size:24px;
+   font-size: 24px;
    font-weight: 400;
    position: relative;
    font-size: 34px;
@@ -106,7 +256,9 @@ body {
    position: relative;
 }
 
-.home-details-text__pretitle::after, .home-details-text__paragraph::after, .empty::after {
+.home-details-text__pretitle::after,
+.home-details-text__paragraph::after,
+.empty::after {
    content: "";
    position: absolute;
 }
@@ -122,7 +274,7 @@ body {
 .home-details-text__paragraph::after {
    background-color: var(--detailColor4);
    width: 230px;
-   height: .8rem;
+   height: 0.8rem;
    top: -20rem;
    left: -3.3rem;
    z-index: -1;
@@ -136,27 +288,25 @@ body {
    left: -22.5rem;
 }
 
-
 .home-details-text__title {
    font-size: 66px;
    font-weight: 600;
    position: relative;
    z-index: 0;
    text-align: left;
-   max-width:fit-content ;
+   max-width: fit-content;
 }
 
 .home-details-text__title::after {
    content: "";
    background-color: var(--detailColor2);
    position: absolute;
-   width:19.8rem;
+   width: 19.8rem;
    height: 2.5rem;
-   top: 2.50rem;
+   top: 2.5rem;
    left: 0;
    z-index: -1;
 }
-
 
 .home-details-text__paragraph {
    width: 70%;
@@ -165,7 +315,6 @@ body {
    position: relative;
    font-size: 24px;
 }
-
 
 .single-detail-img {
    height: 519px;
@@ -181,11 +330,10 @@ body {
    margin-top: 52px;
 }
 
-.home-details__img-col-1>img, .home-details__img-col-2>img {
+.home-details__img-col-1 > img,
+.home-details__img-col-2 > img {
    width: 414px;
 }
-
-
 
 /* Products */
 
@@ -234,21 +382,20 @@ body {
    width: 400px !important;
    background-color: var(--detailColor1);
    height: auto;
-   border-radius: 0px 0px 15px 15px; 
+   border-radius: 0px 0px 15px 15px;
 }
-
 
 /* Payment & Shipment */
 
 .payment-shipment-container {
    padding: 7rem;
    display: flex;
-   flex:1 1 1;
+   flex: 1 1 1;
 }
 
 .payment-shipment__boxes {
    width: 33%;
-   display:flex;
+   display: flex;
    flex-direction: row;
    align-items: flex-start;
    padding: 2rem;
@@ -259,7 +406,6 @@ body {
    border-left: 2px solid var(--textColor3);
    border-right: 2px solid var(--textColor3);
 }
-
 
 .shipment-box1 {
    padding-left: 0;
@@ -276,7 +422,6 @@ body {
    font-weight: 400;
    color: var(--mainColor1);
 }
-
 
 /* Contact */
 
