Agregue: -Termine con la version mobile -Arregle unas cosas de las product card -Arregle el slide

--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,24 @@
    /*outline: 1px solid #f00 !important;*/ /*HABILITAR ESTE COMANDO PARA VER DONDE ESTÁ DESBORDANDO EL CODIGO*/
 }
 
-
-
-
 /* ======================================================================================================================= 
 ====================================================== MOBILE ============================================================ 
 ======================================================================================================================= */
 
-
 /* Body */
+
+.btn:not(.nav-btns button) {
+   background-color: #fff;
+   color: var(--mainColor1);
+   padding: 10px 28px;
+   border-radius: 25px;
+   border: 1px solid rgb(0, 0, 0);
+}
+
+.btn:not(.nav-btns button):hover {
+   background-color: var(--linkColor1);
+   color: #fff;
+}
 body {
    background: rgb(255, 150, 65);
    background: var(--backgroundGradientMobile);
@@ -95,7 +104,7 @@ body {
    transition: all 0.5s ease;
    z-index: -1;
    text-decoration: none;
-   list-style: none
+   list-style: none;
 }
 
 .navbar__menu.active {
@@ -120,14 +129,9 @@ body {
    background: #fff;
 }
 
-.navbar__item {
-   
-}
-
-
 .navbar__links {
    color: var(--textColor1);
-   font-size: 22px;
+   font-size: 19px;
    font-weight: bold;
    display: flex;
    align-items: center;
@@ -184,33 +188,17 @@ body {
    -o-transform: translateY(-8px) rotate(-45deg);
 }
 
-
-
-
-
-
-
 /* Whatsapp */
 .img_wsp {
-   width:100px;
+   width: 100px;
    position: fixed;
-   bottom:80px;
-	right:10px;
-   z-index:100;
+   bottom: 80px;
+   right: 10px;
+   z-index: 100;
 }
 .btn-wsp {
    width: 100px;
-   
 }
-
-
-
-
-
-
-
-
-
 
 /* Details */
 
@@ -219,8 +207,6 @@ body {
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   padding: 0;
-   padding-top: 2rem;
 }
 .home-details-container {
    display: flex;
@@ -228,8 +214,7 @@ body {
    justify-content: center;
    /*align-items: flex-start;*/
    padding-left: 0;
-   padding-top: 2rem;
-   
+   padding-top: 0.4rem;
 }
 
 .home-details-text {
@@ -237,7 +222,7 @@ body {
    display: flex;
    flex-direction: column;
    justify-content: center;
-   margin-left:20px;
+   margin-left: 20px;
    padding-left: 16px;
    border-left: 12px solid var(--detailColor1);
    margin-top: 1rem;
@@ -279,7 +264,7 @@ body {
    height: 0.8rem;
    top: -14.5rem;
    left: -1.8rem;
-   z-index:1;
+   z-index: 1;
 }
 
 .empty::after {
@@ -335,11 +320,57 @@ body {
 
 .home-details__img-col-2 > img {
    width: 100%;
+   padding: 20px;
 }
+/* Products */
 
-
-
-
+.home-product {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: flex-end;
+   color: var(--textColor1);
+   padding: 2rem 0;
+}
+.container_title_products {
+   display: flex;
+   justify-content: center;
+}
+.container-title {
+   display: flex;
+   align-items: flex-start;
+   flex-direction: column;
+}
+.upper-title {
+   font-size: 1rem;
+   line-height: 36.5px;
+   font-weight: 500;
+   color: var(--textColor2);
+}
+.home-contact__title__products {
+   margin-top: 0.2rem;
+   position: relative;
+   z-index: 0;
+   font-size: 40px;
+   color: var(--textColor2);
+}
+.home-contact__title__products::after {
+   content: "";
+   position: absolute;
+   background-color: var(--detailColor5);
+   width: 95%;
+   height: 56%;
+   left: 0.2rem;
+   top: 2.5rem;
+   z-index: -1;
+}
+.card {
+   padding: 0px 0px 8px 0px !important;
+   background-color: var(--detailColor1);
+   width: auto;
+   height: auto;
+   border-radius: 0px 0px 15px 15px;
+}
 
 /* Payment & Shipment */
 
@@ -366,7 +397,6 @@ body {
    width: 50px;
 }
 
-
 .shipment-item-title {
    font-size: 14px;
    font-weight: 700;
@@ -388,9 +418,9 @@ body {
    margin: 1rem 0 4rem 0;
 }
 
-
-
-.bullet1,.bullet2,.bullet3 {
+.bullet1,
+.bullet2,
+.bullet3 {
    width: 13px;
    height: 13px;
    background-color: var(--textColor1);
@@ -441,14 +471,10 @@ body {
    background-color: var(--mainColor1);
    width: 110%;
    height: 80%;
-   left: -.8rem;
+   left: -0.8rem;
    top: 1.2rem;
    z-index: -1;
 }
-
-
-
-
 
 /* Footer */
 
@@ -558,22 +584,19 @@ footer {
    width: 2.2rem;
 }
 
-
 /* ======================================================================================================================= 
 ===================================================== DESKTOP ============================================================ 
 ======================================================================================================================= */
 
-
 @media screen and (min-width: 961px) {
-   
    /* Body */
    body {
       background: rgb(255, 150, 65);
       background: var(--backgroundGradient);
       max-width: 100%;
       font-family: "Red Hat Display", sans-serif;
-}
-   
+   }
+
    /* NavBar */
 
    .navbar {
@@ -581,7 +604,7 @@ footer {
    }
 
    #mobile-menu {
-      display:none;
+      display: none;
    }
 
    .navbar__container {
@@ -590,7 +613,7 @@ footer {
       height: 80px;
       z-index: 1;
       width: 100%;
-      
+
       margin: 0 auto;
       padding: 0 50px;
    }
@@ -631,7 +654,7 @@ footer {
       justify-content: center;
       padding: 0 20px;
       text-decoration: none;
-      max-height:max-content;
+      max-height: max-content;
       transition: all 0.3s ease;
    }
 
@@ -648,13 +671,12 @@ footer {
       transition: all 0.3s ease;
    }
 
-
    /* Js efecto navbar */
    .highlight {
-      border-bottom:10px solid var(--linkColor1);
+      border-bottom: 10px solid var(--linkColor1);
       max-height: calc(inherit - 10px);
    }
-   
+
    /* Slide */
    .slide-img {
       width: 100%;
@@ -698,7 +720,7 @@ footer {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      margin-left:0;
+      margin-left: 0;
       margin-top: 0;
       padding-left: 0;
       padding-right: 0;
@@ -813,7 +835,7 @@ footer {
       color: var(--textColor1);
       padding: 4rem 0;
    }
-   .prueba {
+   .container_title_products {
       display: flex;
       justify-content: center;
    }
@@ -847,7 +869,6 @@ footer {
    }
    .card {
       padding: 0px 0px 8px 0px !important;
-      width: 400px !important;
       background-color: var(--detailColor1);
       height: auto;
       border-radius: 0px 0px 15px 15px;
@@ -873,7 +894,6 @@ footer {
       justify-content: center;
       padding: 0 2rem;
       height: auto;
-      
    }
 
    .payment-shipment__boxes-img {
@@ -975,7 +995,7 @@ footer {
       width: 60%;
       gap: 0;
       margin-top: 0;
-      padding: 0 ;
+      padding: 0;
    }
 
    .footer-container,
