--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@1,900&display=swap');
 /* VARIABLES */
 :root {
    --mainColor1: #6e2828;
@@ -68,7 +68,7 @@ body {
 
 .navbar {
    background: var(--mainColor1);
-   height: 110px;
+   height: 75px;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -90,8 +90,9 @@ body {
 }
 
 .navbar__logo {
-   width: 70%;
-   margin-left: 5%;
+   width: 246px;
+   height: 51px;
+   margin-left: 10%;
 }
 
 .navbar__menu {
@@ -616,10 +617,9 @@ footer {
    .navbar__container {
       display: flex;
       justify-content: space-between;
-      height: 80px;
+      height: 75px;
       z-index: 1;
       width: 100%;
-
       margin: 0 auto;
       padding: 0 50px;
    }
@@ -642,8 +642,11 @@ footer {
    }
 
    .navbar__logo {
-      width: 100%;
-      margin-left: 0;
+      position: absolute;
+      width: 246px;
+      height: 51px;
+      left: 250px;
+      top: 13px;
    }
 
    .navbar__item {
@@ -653,12 +656,12 @@ footer {
 
    .navbar__links {
       color: var(--textColor1);
-      font-size: 22px;
+      font-size: 16px;
       font-weight: bold;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 0 20px;
+      padding: 0 10px;
       text-decoration: none;
       max-height: max-content;
       transition: all 0.3s ease;
@@ -679,6 +682,7 @@ footer {
 
    /* Js efecto navbar */
    .highlight {
+      height: 100%;
       border-bottom: 10px solid var(--linkColor1);
       max-height: calc(inherit - 10px);
    }
@@ -686,7 +690,45 @@ footer {
    /* Slide */
    .slide-img {
       width: 100%;
-      height: 830px;
+      height: 754px;
+   }
+   .container__text{
+      z-index: 1;
+      position: relative;
+      top: 40px; 
+      left: 980px;
+   }  
+   .text-container{
+      font-size: 59px;
+      font-weight: bold;
+      font-family:  'red Hat Display';
+      text-shadow: 10px 10px 5px rgba(0, 0, 0, 0.11);     
+      z-index: 1;
+   }
+   
+.text-container::after{
+      position: absolute;
+   text-align: right;
+      content: "";
+      position: absolute;
+      background-color: var(--detailColor2);
+      width: 1010px;
+      height: 37px;
+      left: -4rem;
+      top: 2.5rem;
+      z-index: -1;
+   }
+   
+   .container__btn{
+      z-index: 1;
+      position: relative;
+      top: 525px;
+      
+   }
+   .btn__products{
+      font-size: 22px;
+      color: #6e2828;
+      font-weight: 700;
    }
    /* Whatsapp */
    .img_wsp {
